[gd_scene load_steps=11 format=2]

[ext_resource path="res://LocalGame/UI/ScoreBackground.png" type="Texture" id=1]
[ext_resource path="res://LocalGame/UI/ScorePoint.png" type="Texture" id=3]
[ext_resource path="res://LocalGame/UI/ScoreAtk.png" type="Texture" id=4]
[ext_resource path="res://LocalGame/UI/ScoreDef.png" type="Texture" id=5]
[ext_resource path="res://LocalGame/UI/LocalUI.gd" type="Script" id=6]
[ext_resource path="res://Fonts/superstar_memesbruh03.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://LocalGame/UI/TimerBackground.png" type="Texture" id=8]
[ext_resource path="res://Sounds/impactMetal_medium_003.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=2]
size = 250
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_char = 4
font_data = ExtResource( 7 )

[node name="LocalUI" type="CanvasLayer"]
layer = 2
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 12
custom_constants/margin_left = 0
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_top = 12.0
margin_right = 1920.0
margin_bottom = 1056.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterUI" type="CenterContainer" parent="MarginContainer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBarBackground" type="TextureRect" parent="MarginContainer/Control/CenterUI"]
margin_left = 711.0
margin_right = 1209.0
margin_bottom = 72.0
rect_min_size = Vector2( 498, 72 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBar" type="TextureRect" parent="MarginContainer/Control/CenterUI"]
margin_left = 645.0
margin_right = 1275.0
margin_bottom = 72.0
rect_min_size = Vector2( 630, 72 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointContainer" type="HBoxContainer" parent="MarginContainer/Control/CenterUI/ScoreBar"]
margin_left = 51.0
margin_top = 30.0
margin_right = 249.0
margin_bottom = 60.0
rect_min_size = Vector2( 198, 30 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point2" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer"]
margin_left = 42.0
margin_right = 72.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point3" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer"]
margin_left = 84.0
margin_right = 114.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point4" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer"]
margin_left = 126.0
margin_right = 156.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point5" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer"]
margin_left = 168.0
margin_right = 198.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="PointContainer2" type="HBoxContainer" parent="MarginContainer/Control/CenterUI/ScoreBar"]
margin_left = 381.0
margin_top = 30.0
margin_right = 579.0
margin_bottom = 60.0
rect_min_size = Vector2( 198, 30 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer2"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point2" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer2"]
margin_left = 42.0
margin_right = 72.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point3" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer2"]
margin_left = 84.0
margin_right = 114.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point4" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer2"]
margin_left = 126.0
margin_right = 156.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point5" type="TextureRect" parent="MarginContainer/Control/CenterUI/ScoreBar/PointContainer2"]
margin_left = 168.0
margin_right = 198.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="SideUI" type="Control" parent="MarginContainer/Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="TextureRect" parent="MarginContainer/Control/SideUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 318.0
rect_min_size = Vector2( 318, 72 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointContainer" type="HBoxContainer" parent="MarginContainer/Control/SideUI/Atk"]
margin_left = 12.0
margin_top = 30.0
margin_right = 210.0
margin_bottom = 60.0
rect_min_size = Vector2( 198, 30 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="TextureRect" parent="MarginContainer/Control/SideUI/Atk/PointContainer"]
modulate = Color( 0.415686, 0.898039, 0.466667, 1 )
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point2" type="TextureRect" parent="MarginContainer/Control/SideUI/Atk/PointContainer"]
modulate = Color( 0.909804, 0.34902, 0.34902, 1 )
margin_left = 42.0
margin_right = 72.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point3" type="TextureRect" parent="MarginContainer/Control/SideUI/Atk/PointContainer"]
modulate = Color( 0.909804, 0.34902, 0.34902, 1 )
margin_left = 84.0
margin_right = 114.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point4" type="TextureRect" parent="MarginContainer/Control/SideUI/Atk/PointContainer"]
margin_left = 126.0
margin_right = 156.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point5" type="TextureRect" parent="MarginContainer/Control/SideUI/Atk/PointContainer"]
margin_left = 168.0
margin_right = 198.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Def" type="TextureRect" parent="MarginContainer/Control/SideUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -318.0
margin_top = -72.0
rect_min_size = Vector2( 318, 72 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointContainer2" type="HBoxContainer" parent="MarginContainer/Control/SideUI/Def"]
margin_left = 108.0
margin_top = 30.0
margin_right = 306.0
margin_bottom = 60.0
rect_min_size = Vector2( 198, 30 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="TextureRect" parent="MarginContainer/Control/SideUI/Def/PointContainer2"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point2" type="TextureRect" parent="MarginContainer/Control/SideUI/Def/PointContainer2"]
margin_left = 42.0
margin_right = 72.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point3" type="TextureRect" parent="MarginContainer/Control/SideUI/Def/PointContainer2"]
modulate = Color( 0.909804, 0.34902, 0.34902, 1 )
margin_left = 84.0
margin_right = 114.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point4" type="TextureRect" parent="MarginContainer/Control/SideUI/Def/PointContainer2"]
modulate = Color( 0.415686, 0.898039, 0.466667, 1 )
margin_left = 126.0
margin_right = 156.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="Point5" type="TextureRect" parent="MarginContainer/Control/SideUI/Def/PointContainer2"]
modulate = Color( 0.415686, 0.898039, 0.466667, 1 )
margin_left = 168.0
margin_right = 198.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Control/CenterContainer"]
margin_left = 897.0
margin_top = 327.0
margin_right = 1022.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.196078 )
custom_constants/shadow_offset_x = -20
custom_constants/shadow_offset_y = 50
text = "0"

[node name="Timer" type="Control" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -72.0
margin_right = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/Timer"]
visible = false
margin_left = 15.0
margin_right = 255.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 72 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Control/Timer"]
margin_left = 100.0
margin_top = 24.0
margin_right = 184.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "1.2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.7
